--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "chart.js": "^3.0.2",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
+    "react-chartkick": "^0.5.1",
     "react-dom": "^17.0.2",
     "react-papaparse": "^3.11.1",
     "react-redux": "^7.2.3",
